Final draft, with fixed Z-index

--- a/styles/style.css
+++ b/styles/style.css
@@ -244,9 +244,7 @@
 .table__cell_theme_dark {
   margin-top: 80px;
   width: 200px;
-  /*z-index was not inheriting until i set it to manually*/
-  z-index: inherit;
-}
+  }
 
 .footer {
   background-color: #1f1f1f;
